workloads/online-boutique/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-boutique
  labels:
    app.kubernetes.io/name: online-boutique
    adaptive-controller/workload: online-boutique
