workloads/online-boutique/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: online-boutique
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice
  namespace: online-boutique
  labels:
    app: productcatalogservice
spec:
  type: ClusterIP
  selector:
    app: productcatalogservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: online-boutique
  labels:
    app: cartservice
spec:
  type: ClusterIP
  selector:
    app: cartservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
